--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
     </build>
     <dependencies>
         <dependency>
+            <groupId>org.camunda.bpm.model</groupId>
+            <artifactId>camunda-dmn-model</artifactId>
+            <version>7.7.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.5.0</version>
@@ -108,11 +113,6 @@
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jdom</groupId>
-            <artifactId>jdom2</artifactId>
-            <version>2.0.6</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
