--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
+                    <configuration>
+                        <useIncrementalCompilation>false</useIncrementalCompilation>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
