Exlude generated classes from test coverage

--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,8 @@
                 <version>0.7.9</version>
                 <configuration>
                     <excludes>
-                        <exclude>de/redsix/dmncheck/feel/FeelExpressions.class</exclude>
-                        <exclude>de/redsix/dmncheck/util/Eithers.class</exclude>
+                        <exclude>**/FeelExpressions.class</exclude>
+                        <exclude>**/Eithers.class</exclude>
                     </excludes>
                 </configuration>
                 <executions>
