Use https instead of http for homepage link

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
     <organization>
         <name>red6 enterprise software GmbH</name>
-        <url>http://redsix.de</url>
+        <url>https://red6-es.de/</url>
     </organization>
 
     <issueManagement>
