--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>dmn-check</name>
     <url>https://github.com/red6/dmn-check</url>
-    <description>Checks consistency of Decision Model Notation (DMN) files</description>
+    <description>A Maven plugin which performs various static analyses on Decision Model Notation (DMN) files to detect bugs</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
