--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: java
 
+script:
+  - mvn clean install -P checkerframework
+
 after_success:
   - mvn clean test jacoco:report coveralls:report
