Enable format string checker

--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,7 @@
                             <annotationProcessors>
                                 <annotationProcessor>org.derive4j.processor.DerivingProcessor</annotationProcessor>
                                 <annotationProcessor>org.checkerframework.checker.regex.RegexChecker</annotationProcessor>
+                                <annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor>
                             </annotationProcessors>
 
                             <annotationProcessorPaths>
