--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,10 @@
         <url>https://github.com/red6/dmn-check/issues</url>
     </issueManagement>
 
+    <scm>
+        <url>https://github.com/red6/dmn-check.git</url>
+    </scm>
+
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
