--- a/pom.xml
+++ b/pom.xml
@@ -321,5 +321,11 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.lukehutch</groupId>
+            <artifactId>fast-classpath-scanner</artifactId>
+            <version>2.18.2</version>
+        </dependency>
+
     </dependencies>
 </project>
