--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
         <url>https://red6-es.de/</url>
     </organization>
 
+    <developers>
+        <developer>
+            <name>Jan Deutelmoser</name>
+        </developer>
+
+        <developer>
+            <name>Pascal Wittmann</name>
+        </developer>
+    </developers>
+
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
@@ -34,8 +44,8 @@
         <connection>scm:git:git@github.com:red6/dmn-check.git</connection>
         <developerConnection>scm:git:git@github.com:red6/dmn-check.git</developerConnection>
         <url>https://github.com/red6/dmn-check.git</url>
-      <tag>HEAD</tag>
-  </scm>
+        <tag>HEAD</tag>
+    </scm>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
