--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,29 @@
 language: java
 
-script:
-  - mvn clean install -P checkerframework
+jdk:
+  - oraclejdk8
+
+install:
+  - mvn --settings .travis/settings.xml clean install -P checkerframework
 
 after_success:
   - mvn clean test jacoco:report coveralls:report
+
+deploy:
+  -
+    provider: script
+    script: .travis/deploy.sh
+    skip_cleanup: true
+    on:
+      repo: red6/dmn-check
+      tags: true
+      jdk: oraclejdk8
+
+  -
+    provider: script
+    script: .travis/deploy.sh
+    skip_cleanup: true
+    on:
+      repo: red6/dmn-check
+      branch: master
+      jdk: oraclejdk8
