--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ language: java
 jdk:
   - oraclejdk8
 
+before_install:
+  - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo "$GPG_SECRET_KEYS" | base64 --decode | gpg2 --import; fi
+  - if [ ! -z "$GPG_OWNERTRUST" ]; then echo "$GPG_OWNERTRUST" | base64 --decode | gpg2 --import-ownertrust; fi
+
 install:
   - mvn --settings .travis/settings.xml clean install -P checkerframework
 
