--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>de.redsix</groupId>
     <artifactId>dmn-check</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <name>dmn-check</name>
     <url>https://github.com/red6/dmn-check</url>
     <description>A Maven plugin which performs various static analyses on Decision Model Notation (DMN) files to detect bugs</description>
@@ -44,7 +44,7 @@
         <connection>scm:git:git@github.com:red6/dmn-check.git</connection>
         <developerConnection>scm:git:git@github.com:red6/dmn-check.git</developerConnection>
         <url>https://github.com/red6/dmn-check.git</url>
-        <tag>HEAD</tag>
+        <tag>1.0.2</tag>
     </scm>
 
     <distributionManagement>
