--- a/pom.xml
+++ b/pom.xml
@@ -421,7 +421,7 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>annotations</artifactId>
-            <version>3.0.1</version>
+            <version>3.0.1u2</version>
         </dependency>
 
         <dependency>
