--- a/pom.xml
+++ b/pom.xml
@@ -334,12 +334,14 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.5.3</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
             <version>3.5.3</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -388,6 +390,7 @@
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>3.5.2</version>
+            <scope>provided</scope>
 
             <!-- Work around vulnerability PLXUTILS-161 !-->
             <exclusions>
@@ -403,6 +406,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-artifact</artifactId>
             <version>3.5.3</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
