Migrate from FastClasspathScanner to ClassGraph
FastClasspathScanner is no longer developed and continues as
ClassGraph with a new uniform API.

Closes issue #1

--- a/pom.xml
+++ b/pom.xml
@@ -429,9 +429,9 @@
         </dependency>
 
         <dependency>
-            <groupId>io.github.lukehutch</groupId>
-            <artifactId>fast-classpath-scanner</artifactId>
-            <version>3.1.11</version>
+            <groupId>io.github.classgraph</groupId>
+            <artifactId>classgraph</artifactId>
+            <version>4.1.2</version>
         </dependency>
 
     </dependencies>
