--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 language: java
 
+# Work around travis-ci/travis-ci/issues/6593
+sudo: true
+cache:
+  directories:
+  - $HOME/.m2
+
 jdk:
   - oraclejdk8
 
