--- a/pom.xml
+++ b/pom.xml
@@ -434,5 +434,11 @@
             <version>4.4.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jgrapht</groupId>
+            <artifactId>jgrapht-core</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
     </dependencies>
 </project>
