--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <checker.framework.version>2.5.8</checker.framework.version>
-        <junit.version>5.3.2</junit.version>
+        <junit-minor.version>3.2</junit-minor.version>
+        <junit.version>5.${junit-minor.version}</junit.version>
         <derive4j.version>1.1.0</derive4j.version>
     </properties>
 
@@ -341,7 +342,7 @@
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
-            <version>1.3.2</version>
+            <version>1.${junit-minor.version}</version>
             <scope>test</scope>
         </dependency>
 
