--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ jdk:
   - openjdk8
 
 before_install:
-  - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo "$GPG_SECRET_KEYS" | base64 --decode | gpg2 --import; fi
-  - if [ ! -z "$GPG_OWNERTRUST" ]; then echo "$GPG_OWNERTRUST" | base64 --decode | gpg2 --import-ownertrust; fi
+  - if [ ! -z "$GPG_SECRET_KEYS" ]; then echo "$GPG_SECRET_KEYS" | base64 --decode | gpg2 --import --no-tty --batch --yes; fi
+  - if [ ! -z "$GPG_OWNERTRUST" ]; then echo "$GPG_OWNERTRUST" | base64 --decode | gpg2 --import-ownertrust --no-tty --batch --yes; fi
 
 install:
   - mvn --settings .travis/settings.xml clean install -P checkerframework
