--- a/server/pom.xml
+++ b/server/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>spark-core</artifactId>
             <version>2.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
     </dependencies>
 
 </project>
