--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -82,6 +82,12 @@
             <version>3.6.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>de.redsix</groupId>
+            <artifactId>dmn-check-plugin-base</artifactId>
+            <version>1.2.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
