--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 
 install:
   - mvn --settings .travis/settings.xml clean install -P checkerframework
+  - cd camunda-modeler-plugin; npm install; npm run bundle
 
 after_success:
   - mvn clean test jacoco:report coveralls:report
