--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -47,6 +47,12 @@
         </dependency>
 
         <dependency>
+            <groupId>de.redsix</groupId>
+            <artifactId>dmn-check-plugin-base</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.6.2</version>
@@ -81,12 +87,6 @@
             <artifactId>maven-artifact</artifactId>
             <version>3.6.2</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>de.redsix</groupId>
-            <artifactId>dmn-check-plugin-base</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
 
     </dependencies>
